# codigo_fonte/backend/src/controllers/UserController.ts
@@ -2,7 +2,9 @@ import { plainToInstance } from "class-transformer";
 import { UserDTO } from "../dtos/user/UserDto";
 import { UserService } from "../service/UserService";
 import { NextFunction, Request, Response } from "express";
-import { SuccessResponse } from "../utils/Responses/SuccessResponse";
+import { SuccessResponse } from "../utils/responses/SuccessResponse";
+import User from "../database/models/User";
+import { BadRequestError } from "../utils/errors/BadResquestError";
 
 const userService = new UserService();
 
@@ -16,6 +18,18 @@ export class UserController {
         .status(201)
         .json(SuccessResponse(user, "Usuário criado com sucesso!", 201));
     } catch (err: any) {
+      next(err);
+    }
+  }
+
+  static async deleteUser(req: Request, res: Response, next: NextFunction) {
+    try {
+      const loggedInUser = req.user;
+      if (!loggedInUser) throw new BadRequestError("Acesso negado");
+
+      await userService.deleteUser(loggedInUser as User);
+      res.status(200).json(SuccessResponse(null, "Usuário deletado", 200));
+    } catch (err) {
       next(err);
     }
   }
